hphp/test/zend/bad/ext/standard/tests/password/password_verify_error.php
<?php
//-=-=-=-

var_dump(password_verify());

var_dump(password_verify("foo"));

?>